--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -6,6 +6,8 @@ update_configs:
     allowed_updates:
       - match:
           dependency_name: "1-zishkaz"
+      - match:
+          dependency_name: "1-Ramazanov-Amir"
     ignored_updates:
       - match:
           dependency_name: "1-grading-tests"
