--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -8,6 +8,8 @@ update_configs:
           dependency_name: "1-zishkaz"
       - match:
           dependency_name: "1-Ramazanov-Amir"
+      - match:
+          dependency_name: "1-MashrurIslam"
     ignored_updates:
       - match:
           dependency_name: "1-grading-tests"
