--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "1-rudolf101"]
 	path = 1-rudolf101
 	url = https://github.com/spbu-coding/1-rudolf101.git
+[submodule "1-danielsheh02"]
+	path = 1-danielsheh02
+	url = https://github.com/spbu-coding/1-danielsheh02.git
