--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "1-danielsheh02"]
 	path = 1-danielsheh02
 	url = https://github.com/spbu-coding/1-danielsheh02.git
+[submodule "1-kettlberry"]
+	path = 1-kettlberry
+	url = https://github.com/spbu-coding/1-kettlberry.git
