Added 1-ToTTopBYxe submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "1-kettlberry"]
 	path = 1-kettlberry
 	url = https://github.com/spbu-coding/1-kettlberry.git
+[submodule "1-ToTTopBYxe"]
+	path = 1-ToTTopBYxe
+	url = https://github.com/spbu-coding/1-ToTTopBYxe.git
