--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "1-ToTTopBYxe"]
 	path = 1-ToTTopBYxe
 	url = https://github.com/spbu-coding/1-ToTTopBYxe.git
+[submodule "1-TimPushkin"]
+	path = 1-TimPushkin
+	url = https://github.com/spbu-coding/1-TimPushkin.git
