Added 1-MansurSakiev submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "1-michael555444"]
 	path = 1-michael555444
 	url = https://github.com/spbu-coding/1-michael555444.git
+[submodule "1-MansurSakiev"]
+	path = 1-MansurSakiev
+	url = https://github.com/spbu-coding/1-MansurSakiev.git
