--- a/.gitmodules
+++ b/.gitmodules
@@ -55,3 +55,6 @@
 [submodule "1-AzimMuradov"]
 	path = 1-AzimMuradov
 	url = https://github.com/spbu-coding/1-AzimMuradov.git
+[submodule "1-artmotika"]
+	path = 1-artmotika
+	url = https://github.com/spbu-coding/1-artmotika.git
