Fixed root CMakeList.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,6 @@ project(tests LANGUAGES C ASM)
 set(CMAKE_C_STANDARD 99)
 
 if (IS_DIRECTORY ${STUDENT_DIR})
-    set(STUDENT_SOURCE_DIR ${STUDENT_DIR}/src)
+    add_subdirectory(${STUDENT_DIR}/src)
 endif()
 
