--- a/.gitmodules
+++ b/.gitmodules
@@ -97,3 +97,6 @@
 [submodule "1-XeniaKart"]
 	path = 1-XeniaKart
 	url = https://github.com/spbu-coding/1-XeniaKart.git
+[submodule "1-SlavaLatokhin"]
+	path = 1-SlavaLatokhin
+	url = https://github.com/spbu-coding/1-SlavaLatokhin.git
