--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -5,6 +5,8 @@ update_configs:
     update_schedule: "daily"
     allowed_updates:
       - match:
+          dependency_name: "1-GalbadrakhB"
+      - match:
           dependency_name: "1-IlyaMuravjov"
       - match:
           dependency_name: "1-baranov1dragonsuper"
