--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -5,6 +5,8 @@ update_configs:
     update_schedule: "daily"
     allowed_updates:
       - match:
+          dependency_name: "1-AndreyBryns"
+      - match:
           dependency_name: "1-Tizain"
       - match:
           dependency_name: "1-st085683"
